updated footer links on all pages

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 
   <!--teachers section header-->
   <div class="col-md-12 text-center mb-5 text-light">
-    <h2>Meet Our Teachers</h2>
+    <h2 class="display-6">Meet Our Teachers</h2>
   </div>
 
   <!--teachers section row-->
@@ -463,7 +463,7 @@
 <div class="container py-5">
 
   <div class="col-md-12 text-center mb-5 text-dark">
-    <h2>What our students and families say</h2>
+    <h2 class="display-6">What our students and families say</h2>
   </div>
 
 
@@ -559,8 +559,8 @@
 
 <div class="container-fluid get-started d-flex align-items-center">
 
-  <div class="ms-5 filter p-4 rounded">
-    <h2 class="display-3 text-light">Ready to get started?</h2>
+  <div class="filter p-4 rounded ms-md-5">
+    <h2 class="display-4 text-light">Ready to get started?</h2>
     <p class="lead text-light pt-2">Ready to begin your musical journey with DCAM?<br>Schedule your free in-person or online trial lesson today!</p>
     <div class="pt-4 text-center">
       <button type="button" class="btn btn-warning text-light btn-lg mb-3 mb-sm-0 me-3 text-nowrap" data-bs-toggle="modal" data-bs-target="#trialModal">Free Trial Lesson</button>
@@ -586,7 +586,7 @@
         <h5 class="text-light ovo mb-3">WHAT WE OFFER:</h5>
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link py-2 ps-0 d-inline-block" href="#">Piano Lessons</a>
+            <a class="nav-link py-2 ps-0 d-inline-block" href="piano-lessons.html">Piano Lessons</a>
           </li>
           <li class="nav-item">
             <a class="nav-link py-2 ps-0 d-inline-block" href="#">Guitar Lessons</a>
@@ -616,13 +616,13 @@
 
         <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link py-2 ps-0 d-inline-block" href="#">About Us</a>
+              <a class="nav-link py-2 ps-0 d-inline-block" href="our-story.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link py-2 ps-0 d-inline-block" href="#">Teachers</a>
+              <a class="nav-link py-2 ps-0 d-inline-block" href="teachers.html">Teachers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link py-2 ps-0 d-inline-block" href="#">Rates</a>
+              <a class="nav-link py-2 ps-0 d-inline-block" href="rates.html">Rates</a>
             </li>
             <li class="nav-item">
               <a class="nav-link py-2 ps-0 d-inline-block" href="#">Blog</a>
