--- a/teachers.html
+++ b/teachers.html
@@ -32,7 +32,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle dcam-btn" href="#" id="lessonsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Music Lessons</a>
                     <ul class="dropdown-menu dcam-blue-reg" aria-labelledby="lessonsDropdown">
-                      <li><a class="dropdown-item" href="#">Piano Lessons</a></li>
+                      <li><a class="dropdown-item" href="piano-lessons.html">Piano Lessons</a></li>
                       <li><a class="dropdown-item" href="#">Guitar Lessons</a></li>
                       <li><a class="dropdown-item" href="#">Drum Lessons</a></li>
                       <li><a class="dropdown-item" href="#">Voice Lessons</a></li>
@@ -46,7 +46,7 @@
                     <a class="nav-link dcam-btn" href="rates.html">Rates</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active dcam-btn"  aria-current="page" href="#">Teachers</a>
+                    <a class="nav-link active dcam-btn" aria-current="page" href="#">Teachers</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link dcam-btn" href="#">Reviews</a>
@@ -341,7 +341,7 @@
         <h5 class="text-light ovo mb-3">WHAT WE OFFER:</h5>
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link py-2 ps-0 d-inline-block" href="#">Piano Lessons</a>
+            <a class="nav-link py-2 ps-0 d-inline-block" href="piano-lessons.html">Piano Lessons</a>
           </li>
           <li class="nav-item">
             <a class="nav-link py-2 ps-0 d-inline-block" href="#">Guitar Lessons</a>
@@ -371,13 +371,13 @@
 
         <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link py-2 ps-0 d-inline-block" href="#">About Us</a>
+              <a class="nav-link py-2 ps-0 d-inline-block" href="our-story.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link py-2 ps-0 d-inline-block" href="#">Teachers</a>
+              <a class="nav-link active py-2 ps-0 d-inline-block" aria-current="page" href="#">Teachers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link py-2 ps-0 d-inline-block" href="#">Rates</a>
+              <a class="nav-link py-2 ps-0 d-inline-block" href="rates.html">Rates</a>
             </li>
             <li class="nav-item">
               <a class="nav-link py-2 ps-0 d-inline-block" href="#">Blog</a>
