--- a/contact.html
+++ b/contact.html
@@ -335,7 +335,7 @@
         <h5 class="text-light ovo mb-3">WHAT WE OFFER:</h5>
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link py-2 ps-0 d-inline-block" href="#">Piano Lessons</a>
+            <a class="nav-link py-2 ps-0 d-inline-block" href="piano-lessons.html">Piano Lessons</a>
           </li>
           <li class="nav-item">
             <a class="nav-link py-2 ps-0 d-inline-block" href="#">Guitar Lessons</a>
@@ -365,13 +365,13 @@
 
         <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link py-2 ps-0 d-inline-block" href="#">About Us</a>
+              <a class="nav-link py-2 ps-0 d-inline-block" href="our-story.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link py-2 ps-0 d-inline-block" href="#">Teachers</a>
+              <a class="nav-link py-2 ps-0 d-inline-block" href="rates.html">Teachers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link py-2 ps-0 d-inline-block" href="#">Rates</a>
+              <a class="nav-link py-2 ps-0 d-inline-block" href="rates.html">Rates</a>
             </li>
             <li class="nav-item">
               <a class="nav-link py-2 ps-0 d-inline-block" href="#">Blog</a>
