--- a/our-story.html
+++ b/our-story.html
@@ -250,7 +250,7 @@
         <h5 class="text-light ovo mb-3">WHAT WE OFFER:</h5>
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link py-2 ps-0 d-inline-block" href="#">Piano Lessons</a>
+            <a class="nav-link py-2 ps-0 d-inline-block" href="piano-lessons.html">Piano Lessons</a>
           </li>
           <li class="nav-item">
             <a class="nav-link py-2 ps-0 d-inline-block" href="#">Guitar Lessons</a>
@@ -283,10 +283,10 @@
               <a class="nav-link py-2 ps-0 d-inline-block" href="#">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link py-2 ps-0 d-inline-block" href="#">Teachers</a>
+              <a class="nav-link py-2 ps-0 d-inline-block" href="teachers.html">Teachers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link py-2 ps-0 d-inline-block" href="#">Rates</a>
+              <a class="nav-link py-2 ps-0 d-inline-block" href="rates.html">Rates</a>
             </li>
             <li class="nav-item">
               <a class="nav-link py-2 ps-0 d-inline-block" href="#">Blog</a>
