added gallery.html page

--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
 <div class="container py-5">
 
   <div class="col-md-12 text-center mb-5 text-dark">
-    <h2 class="display-6">What our students and families say</h2>
+    <h2 class="display-6">What our customers say</h2>
   </div>
 
 
