added layout and images to gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -223,7 +223,147 @@
 <hr class="mb-5">
 
 
-    <div class="row row-cols-1 row-cols-md-5 g-4">
+
+<!-- Gallery -->
+<div class="row text-center">
+
+  <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
+    <img
+      src="img/gallery/avery1.jpg"
+      class="w-75 shadow-1-strong rounded mb-4 zoom"
+      alt=""
+    />
+    <img
+      src="img/gallery/andrew1.jpg"
+      class="w-75 shadow-1-strong rounded mb-4 zoom"
+      alt=""
+    />
+    <img
+      src="img/gallery/sarah1.jpeg"
+      class="w-75 shadow-1-strong rounded mb-4 zoom"
+      alt=""
+    />
+    <img
+      src="img/gallery/lesson1.jpg"
+      class="w-75 shadow-1-strong rounded mb-4 zoom"
+      alt=""
+    />
+    <img
+      src="img/gallery/lesson2.jpg"
+      class="w-75 shadow-1-strong rounded mb-4 zoom"
+      alt=""
+    />
+  </div>
+
+  <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
+    <img
+      src="img/gallery/sean1.jpeg"
+      class="w-75 shadow-1-strong rounded mb-4 zoom"
+      alt=""
+    />
+    <img
+      src="img/gallery/hannah1.jpg"
+      class="w-75 shadow-1-strong rounded mb-4 zoom"
+      alt=""
+    />
+    <img
+      src="img/gallery/mateo1.jpg"
+      class="w-75 shadow-1-strong rounded mb-4 zoom"
+      alt=""
+    />
+    <img
+      src="img/gallery/sophia1.jpg"
+      class="w-75 shadow-1-strong rounded mb-4 zoom"
+      alt=""
+    />
+
+  </div>
+
+  <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
+    <img
+      src="img/gallery/sasha1.jpg"
+      class="w-75 shadow-1-strong rounded mb-4 zoom"
+      alt=""
+    />
+    <img
+      src="img/gallery/nikhil1.jpg"
+      class="w-75 shadow-1-strong rounded mb-4 zoom"
+      alt=""
+    />
+    <img
+      src="img/gallery/mia1.jpg"
+      class="w-75 shadow-1-strong rounded mb-4 zoom"
+      alt=""
+    />
+    <img
+      src="img/gallery/matthew1.jpg"
+      class="w-75 shadow-1-strong rounded mb-4 zoom"
+      alt=""
+    />
+    <img
+      src="img/gallery/mia1.jpg"
+      class="w-75 shadow-1-strong rounded mb-4 zoom"
+      alt=""
+    />
+  </div>
+
+  <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
+    <img
+      src="img/gallery/peter1.jpg"
+      class="w-75 shadow-1-strong rounded mb-4 zoom"
+      alt=""
+    />
+    <img
+      src="img/gallery/tsion1.jpg"
+      class="w-75 shadow-1-strong rounded mb-4 zoom"
+      alt=""
+    />
+    <img
+      src="img/gallery/gordiy1.jpg"
+      class="w-75 shadow-1-strong rounded mb-4 zoom"
+      alt=""
+    />
+    <img
+      src="img/gallery/viviane1.jpg"
+      class="w-75 shadow-1-strong rounded mb-4 zoom"
+      alt=""
+    />
+    <img
+      src="img/gallery/markian1.jpg"
+      class="w-75 shadow-1-strong rounded mb-4 zoom"
+      alt=""
+    />
+  </div>
+
+
+</div>
+<!-- Gallery -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- <div class="row row-cols-1 row-cols-md-5 g-4">
 
         <div class="col">
             <div class="card">
@@ -276,7 +416,7 @@
             </div>
         </div>
 
-     </div>
+     </div> -->
 
 </div><!--/container-->
 
