tried another carousel code, still not working right

--- a/gallery.html
+++ b/gallery.html
@@ -46,13 +46,13 @@
                     <a class="nav-link dcam-btn" href="rates.html">Rates</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active dcam-btn" aria-current="page" href="#">Teachers</a>
+                    <a class="nav-link dcam-btn" href="#">Teachers</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link dcam-btn" href="#">Reviews</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link dcam-btn" href="#">Gallery</a>
+                    <a class="nav-link active dcam-btn" aria-current="page" href="#">Gallery</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle dcam-btn" href="#" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
@@ -225,198 +225,118 @@
 
 
 <!-- Gallery -->
-<div class="row text-center">
+  <div class="row text-center">
 
-  <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
-    <img
-      src="img/gallery/avery1.jpg"
-      class="w-75 shadow-1-strong rounded mb-4 zoom"
-      alt=""
-    />
-    <img
-      src="img/gallery/andrew1.jpg"
-      class="w-75 shadow-1-strong rounded mb-4 zoom"
-      alt=""
-    />
-    <img
-      src="img/gallery/sarah1.jpeg"
-      class="w-75 shadow-1-strong rounded mb-4 zoom"
-      alt=""
-    />
-    <img
-      src="img/gallery/lesson1.jpg"
-      class="w-75 shadow-1-strong rounded mb-4 zoom"
-      alt=""
-    />
-    <img
-      src="img/gallery/lesson2.jpg"
-      class="w-75 shadow-1-strong rounded mb-4 zoom"
-      alt=""
-    />
+    <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
+        <img
+          src="img/gallery/avery1.jpg"
+          class="w-75 shadow-1-strong rounded mb-4 zoom"
+          alt=""
+        />
+        <img
+          src="img/gallery/andrew1.jpg"
+          class="w-75 shadow-1-strong rounded mb-4 zoom"
+          alt=""
+        />
+        <img
+          src="img/gallery/sarah1.jpeg"
+          class="w-75 shadow-1-strong rounded mb-4 zoom"
+          alt=""
+        />
+        <img
+          src="img/gallery/lesson1.jpg"
+          class="w-75 shadow-1-strong rounded mb-4 zoom"
+          alt=""
+        />
+        <img
+          src="img/gallery/lesson2.jpg"
+          class="w-75 shadow-1-strong rounded mb-4 zoom"
+          alt=""
+        />
+    </div>
+
+    <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
+        <img
+          src="img/gallery/sean1.jpeg"
+          class="w-75 shadow-1-strong rounded mb-4 zoom"
+          alt=""
+        />
+        <img
+          src="img/gallery/hannah1.jpg"
+          class="w-75 shadow-1-strong rounded mb-4 zoom"
+          alt=""
+        />
+        <img
+          src="img/gallery/mateo1.jpg"
+          class="w-75 shadow-1-strong rounded mb-4 zoom"
+          alt=""
+        />
+        <img
+          src="img/gallery/sophia1.jpg"
+          class="w-75 shadow-1-strong rounded mb-4 zoom"
+          alt=""
+        />
+    </div>
+
+    <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
+        <img
+          src="img/gallery/sasha1.jpg"
+          class="w-75 shadow-1-strong rounded mb-4 zoom"
+          alt=""
+        />
+        <img
+          src="img/gallery/nikhil1.jpg"
+          class="w-75 shadow-1-strong rounded mb-4 zoom"
+          alt=""
+        />
+        <img
+          src="img/gallery/mia1.jpg"
+          class="w-75 shadow-1-strong rounded mb-4 zoom"
+          alt=""
+        />
+        <img
+          src="img/gallery/matthew1.jpg"
+          class="w-75 shadow-1-strong rounded mb-4 zoom"
+          alt=""
+        />
+        <img
+          src="img/gallery/mia1.jpg"
+          class="w-75 shadow-1-strong rounded mb-4 zoom"
+          alt=""
+        />
+    </div>
+
+    <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
+        <img
+          src="img/gallery/peter1.jpg"
+          class="w-75 shadow-1-strong rounded mb-4 zoom"
+          alt=""
+        />
+        <img
+          src="img/gallery/tsion1.jpg"
+          class="w-75 shadow-1-strong rounded mb-4 zoom"
+          alt=""
+        />
+        <img
+          src="img/gallery/gordiy1.jpg"
+          class="w-75 shadow-1-strong rounded mb-4 zoom"
+          alt=""
+        />
+        <img
+          src="img/gallery/viviane1.jpg"
+          class="w-75 shadow-1-strong rounded mb-4 zoom"
+          alt=""
+        />
+        <img
+          src="img/gallery/markian1.jpg"
+          class="w-75 shadow-1-strong rounded mb-4 zoom"
+          alt=""
+        />
+    </div>
+
+
   </div>
-
-  <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
-    <img
-      src="img/gallery/sean1.jpeg"
-      class="w-75 shadow-1-strong rounded mb-4 zoom"
-      alt=""
-    />
-    <img
-      src="img/gallery/hannah1.jpg"
-      class="w-75 shadow-1-strong rounded mb-4 zoom"
-      alt=""
-    />
-    <img
-      src="img/gallery/mateo1.jpg"
-      class="w-75 shadow-1-strong rounded mb-4 zoom"
-      alt=""
-    />
-    <img
-      src="img/gallery/sophia1.jpg"
-      class="w-75 shadow-1-strong rounded mb-4 zoom"
-      alt=""
-    />
-
-  </div>
-
-  <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
-    <img
-      src="img/gallery/sasha1.jpg"
-      class="w-75 shadow-1-strong rounded mb-4 zoom"
-      alt=""
-    />
-    <img
-      src="img/gallery/nikhil1.jpg"
-      class="w-75 shadow-1-strong rounded mb-4 zoom"
-      alt=""
-    />
-    <img
-      src="img/gallery/mia1.jpg"
-      class="w-75 shadow-1-strong rounded mb-4 zoom"
-      alt=""
-    />
-    <img
-      src="img/gallery/matthew1.jpg"
-      class="w-75 shadow-1-strong rounded mb-4 zoom"
-      alt=""
-    />
-    <img
-      src="img/gallery/mia1.jpg"
-      class="w-75 shadow-1-strong rounded mb-4 zoom"
-      alt=""
-    />
-  </div>
-
-  <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
-    <img
-      src="img/gallery/peter1.jpg"
-      class="w-75 shadow-1-strong rounded mb-4 zoom"
-      alt=""
-    />
-    <img
-      src="img/gallery/tsion1.jpg"
-      class="w-75 shadow-1-strong rounded mb-4 zoom"
-      alt=""
-    />
-    <img
-      src="img/gallery/gordiy1.jpg"
-      class="w-75 shadow-1-strong rounded mb-4 zoom"
-      alt=""
-    />
-    <img
-      src="img/gallery/viviane1.jpg"
-      class="w-75 shadow-1-strong rounded mb-4 zoom"
-      alt=""
-    />
-    <img
-      src="img/gallery/markian1.jpg"
-      class="w-75 shadow-1-strong rounded mb-4 zoom"
-      alt=""
-    />
-  </div>
-
-
-</div>
 <!-- Gallery -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- <div class="row row-cols-1 row-cols-md-5 g-4">
-
-        <div class="col">
-            <div class="card">
-                <img src="img/teachers/andrew2.jpg" class="card-img-top zoom" alt="...">
-            </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <img src="img/teachers/andrew2.jpg" class="card-img-top zoom" alt="...">
-            </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <img src="img/teachers/andrew2.jpg" class="card-img-top zoom" alt="...">
-            </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <img src="img/teachers/andrew2.jpg" class="card-img-top zoom" alt="...">
-            </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <img src="img/teachers/andrew2.jpg" class="card-img-top zoom" alt="...">
-            </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <img src="img/teachers/andrew2.jpg" class="card-img-top zoom" alt="...">
-            </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <img src="img/teachers/andrew2.jpg" class="card-img-top zoom" alt="...">
-            </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <img src="img/teachers/andrew2.jpg" class="card-img-top zoom" alt="...">
-            </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <img src="img/teachers/andrew2.jpg" class="card-img-top zoom" alt="...">
-            </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <img src="img/teachers/andrew2.jpg" class="card-img-top zoom" alt="...">
-            </div>
-        </div>
-
-     </div> -->
 
 </div><!--/container-->
 
@@ -470,10 +390,13 @@
               <a class="nav-link py-2 ps-0 d-inline-block" href="our-story.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active py-2 ps-0 d-inline-block" aria-current="page" href="#">Teachers</a>
+              <a class="nav-link py-2 ps-0 d-inline-block" aria-current="page" href="#">Teachers</a>
             </li>
             <li class="nav-item">
               <a class="nav-link py-2 ps-0 d-inline-block" href="rates.html">Rates</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active py-2 ps-0 d-inline-block" href="#">Gallery</a>
             </li>
             <li class="nav-item">
               <a class="nav-link py-2 ps-0 d-inline-block" href="#">Blog</a>
