--- a/teachers.html
+++ b/teachers.html
@@ -52,7 +52,7 @@
                     <a class="nav-link dcam-btn" href="#">Reviews</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link dcam-btn" href="#">Gallery</a>
+                    <a class="nav-link dcam-btn" href="gallery.html">Gallery</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle dcam-btn" href="#" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
@@ -378,6 +378,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link py-2 ps-0 d-inline-block" href="rates.html">Rates</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link py-2 ps-0 d-inline-block" href="gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
               <a class="nav-link py-2 ps-0 d-inline-block" href="#">Blog</a>
