temporarily removed slider from home page, other small cosmetic changes

--- a/gallery.html
+++ b/gallery.html
@@ -46,7 +46,7 @@
                     <a class="nav-link dcam-btn" href="rates.html">Rates</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link dcam-btn" href="#">Teachers</a>
+                    <a class="nav-link dcam-btn" href="teachers.html">Teachers</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link dcam-btn" href="#">Reviews</a>
@@ -390,13 +390,13 @@
               <a class="nav-link py-2 ps-0 d-inline-block" href="our-story.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link py-2 ps-0 d-inline-block" aria-current="page" href="#">Teachers</a>
+              <a class="nav-link py-2 ps-0 d-inline-block" href="teachers.html">Teachers</a>
             </li>
             <li class="nav-item">
               <a class="nav-link py-2 ps-0 d-inline-block" href="rates.html">Rates</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active py-2 ps-0 d-inline-block" href="#">Gallery</a>
+              <a class="nav-link active py-2 ps-0 d-inline-block" aria-current="page" href="#">Gallery</a>
             </li>
             <li class="nav-item">
               <a class="nav-link py-2 ps-0 d-inline-block" href="#">Blog</a>
