--- a/rates.html
+++ b/rates.html
@@ -32,7 +32,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle dcam-btn" href="#" id="lessonsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Music Lessons</a>
                     <ul class="dropdown-menu dcam-blue-reg" aria-labelledby="lessonsDropdown">
-                      <li><a class="dropdown-item" href="#">Piano Lessons</a></li>
+                      <li><a class="dropdown-item" href="piano-lessons.html">Piano Lessons</a></li>
                       <li><a class="dropdown-item" href="#">Guitar Lessons</a></li>
                       <li><a class="dropdown-item" href="#">Drum Lessons</a></li>
                       <li><a class="dropdown-item" href="#">Voice Lessons</a></li>
@@ -235,7 +235,7 @@
         <button type="button" class="btn dcam-green text-white border-dark btn-lg my-5"><i class="fas fa-file-pdf fa-sm"></i> Download Payment Schedule</i></button> 
     </a>
 
-    <div class="col-9 m-auto text-start">
+    <div class="col-md-9 m-auto text-start">
         <h5 class="text-uppercase mb-4 text-start">Private Lessons:</h5>
         <ul>
             <li>There is no sales tax on music lessons – rates are exactly as indicated</li>
@@ -255,7 +255,7 @@
         <button type="button" class="btn dcam-green text-white border-dark btn-lg my-5"><i class="fas fa-file-pdf fa-sm"></i> Download Payment Schedule</button> 
     </a>
 
-    <div class="col-9 m-auto text-start">
+    <div class="col-md-9 m-auto text-start">
         <h5 class=" text-uppercase mb-4 text-start">Semi-Private Lessons:</h5>
         <ul>
             <li>There is no sales tax on music lessons – rates are exactly as indicated
