--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 
 <!-- BANNER -->
-<div class="container-fluid bg-dcam bg-light mb-5">
+<div class="container-fluid bg-dcam bg-light mb-0">
   <div class="row d-flex justify-content-end">
 
       <div class="col-lg-6 col-xxl-7 pe-0 text-center mt-5">
@@ -218,39 +218,47 @@
 
 <!--SLIDER SECTION-->
 
-<div class="container-fluid slider-div slider-bg">
+<!-- <div class="container-fluid slider-div">
 
 
-  <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-
-    <div class="carousel-inner">
-        <div class="carousel-item active text-center">
-          <img src="img/gallery/lesson1.jpg" width="25%" height="100%"></img>
-        </div>
-        <div class="carousel-item text-center">
-          <img src="img/gallery/nikhil1.jpg" width="25%" height="100%"></img>
-        </div>
-        <div class="carousel-item text-center">
-          <img src="img/gallery/gordiy1.jpg" width="25%" height="100%"></img>
-        </div>
-     </div>
-
-    <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="img/gallery/mateo1.jpg" class="d-block w-25 mx-auto" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/gallery/matthew1.jpg" class="d-block w-25 mx-auto" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/gallery/nastya1.jpg" class="d-block w-25 mx-auto" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/gallery/nikhil1.jpg" class="d-block w-25 mx-auto" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/gallery/sarah1.jpeg" class="d-block w-25 mx-auto" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/gallery/peter1.jpg" class="d-block w-25 mx-auto" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/gallery/sophia1.jpg" class="d-block w-25 mx-auto" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/gallery/viviane1.jpg" class="d-block w-25 mx-auto" alt="...">
+            </div>
+      </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
   </div>
 
-</div>
+</div> -->
 
 
 <!--/SLIDER SECTION-->
@@ -384,8 +392,6 @@
 </div><!--/container-->
 
 
-
-
 <!-- TEACHERS SECTION -->
 <div class="container-fluid dcam-blue-reg py-5">
 
@@ -398,7 +404,7 @@
 
   <div class="row justify-content-center">
 
-    <div class="card p-0 my-3 mx-md-4" style="width: 18rem;">
+    <div class="card p-0 my-3 mx-md-4" style="width: 20rem;">
         <img src="img/teachers/raul2.jpg" class="card-img-top img-thumbnail" alt="...">
         <div class="card-body">
           <h4 class="card-title ovo text-center"><strong>Raul Pineda</strong></h4>
@@ -409,7 +415,7 @@
         </div>
     </div>
 
-      <div class="card p-0 my-3 mx-md-4" style="width: 18rem;">
+      <div class="card p-0 my-3 mx-md-4" style="width: 20rem;">
         <img src="img/teachers/andrew2.jpg" class="card-img-top img-thumbnail" alt="...">
         <div class="card-body">
           <h4 class="card-title ovo text-center"><strong>Andrew Marzotto</strong></h4>
@@ -420,7 +426,7 @@
         </div>
       </div>
 
-      <div class="card p-0 my-3 mx-md-4" style="width: 18rem;">
+      <div class="card p-0 my-3 mx-md-4" style="width: 20rem;">
         <img src="img/teachers/yeri.png" class="card-img-top img-thumbnail" alt="...">
         <div class="card-body">
           <h4 class="card-title ovo text-center"><strong>Yeri Lim</strong></h4>
@@ -431,7 +437,7 @@
         </div>
       </div>
 
-      <div class="card p-0 my-3 mx-md-4" style="width: 18rem;">
+      <div class="card p-0 my-3 mx-md-4" style="width: 20rem;">
         <img src="img/teachers/jonathan3.jpg" class="card-img-top img-thumbnail" alt="...">
         <div class="card-body">
           <h4 class="card-title ovo text-center"><strong>Jonathan Stuchbery</strong></h4>
