--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="col-lg-6 col-xxl-7 pe-0 text-center mt-5">
           <div>
             <h1 class="display-4 dcam-text-orange roboto-ital roboto-bold">Music Lessons in Etobicoke</h1>
-            <p class="lead">Discover the joy that music can bring, register for your free trial today!</p>
+            <h3><span class="lessons"></span> lessons</h3>
           </div>
 
           <div class="d-md-flex justify-content-center pt-5 mb-5">
@@ -664,6 +664,20 @@
 
 
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<!-- <script src="node_modules/typed.js/src/typed.js"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+
+<script>
+//SEO-friendly version
+var typed = new Typed('.lessons', {
+  strings: ["piano", "guitar","drums", "voice", "music theory"],
+  typeSpeed: 40,
+  backSpeed: 40,
+  loop: true,
+  cursorChar: '',
+
+});
+</script>
 
 <!-- CDN scripts, for testing -->
 
