--- a/piano-lessons.html
+++ b/piano-lessons.html
@@ -55,7 +55,7 @@
                     <a class="nav-link dcam-btn" href="gallery.html">Gallery</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link active dropdown-toggle dcam-btn" href="#" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
+                  <a class="nav-link dropdown-toggle dcam-btn" href="#" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
                   <ul class="dropdown-menu dcam-blue-reg" aria-labelledby="aboutDropdown">
                     <li><a class="dropdown-item" href="our-mission.html">Our Mission</a></li>
                     <li><a class="dropdown-item" href="our-story.html">Our Story</a></li>
