--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
 
+
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-dark p-0 sticky-top">
   <div class="container-fluid dcam-bg-gradient">
@@ -77,29 +78,39 @@
 
 
 <!-- BANNER -->
-<div class="container-fluid bg-dcam bg-light mb-0 banner">
-  <div class="row d-flex justify-content-end" style="height: 100%">
+<div class="container-fluid bg-dcam bg-light mb-0 banner px-0">
+  <!-- BANNER SOCIAL -->
+  <div class="container-fluid d-flex flex-column flex-sm-row justify-content-between align-items-center filter">
+    <div class="py-2 social">
+      <a href="https://www.facebook.com/dacapomusic.ca/"><i class="fab fa-facebook-square fa-2x pe-3 dcam-text-gray"></i></a>
+      <a href="https://www.instagram.com/dacapomusic.ca/"><i class="fab fa-instagram-square fa-2x pe-3 dcam-text-gray"></i></a>
+      <a href="https://www.youtube.com/watch?v=gSPAOkyO4AA"><i class="fab fa-youtube-square fa-2x pe-3 dcam-text-gray"></i></a>
+    </div>
+      <a role="button" class="btn text-lg-start py-2 dcam-text-gray" href="mailto:info@dacapomusic.ca"><i class="fas fa-envelope"></i> info@dacapomusic.ca</a>
+      <a role="button" class="btn text-lg-start py-2 dcam-text-gray" href="tel:+14162379595"><i class="fas fa-phone"></i> (416) 237-9595</a>
+  </div>
+  <!-- /BANNER SOCIAL -->
 
-      <div class="col-lg-7 col-xxl-7 pe-0 text-center mt-5 d-flex flex-column justify-content-evenly" style="padding-left: 0px">
-          <div>
-            <h1 class="display-4 dcam-text-orange roboto-ital roboto-bold">Music Lessons in Etobicoke</h1>
-          </div>
-          <div class="div">
-            <h2><span class="lessons"></span> lessons</h2>
-          </div>
-          <div class="d-flex flex-column flex-sm-row justify-content-evenly pt-5 mb-5">
+  <!-- BANNER MAIN -->
+  <div class="container-fluid d-flex justify-content-end" style="height: 100%">
+
+      <div class="col-lg-9 col-xxl-8 pe-0 d-flex flex-column justify-content-center text-center" style="padding-left: 0px">
+
+          <h1 class="display-5 dcam-text-orange roboto-ital roboto-bold">Music lessons in Etobicoke</h1>
+          <h2 class="mb-5">(Humbertown Shopping Center)</h2>
+          <h3 class="mb-5 fst-italic text-light filter p-3 rounded text-start">Discover your passion for music by learning from from our amazing teachers. Book your free, no-obligation trial lesson today and start your musical journey with Da Capo Academy of Music!</h3>
+          <!-- <h3>&bullet; Choose from <span class="lessons"></span></h3> -->
+
+          <div class="d-flex flex-column flex-sm-row justify-content-evenly mt-2 mb-5">
                   <button type="button" class="btn btn-warning text-light btn-lg mb-3 mb-sm-0 text-nowrap" data-bs-toggle="modal" data-bs-target="#trialModal">Free Trial Lesson</button>
                   <button type="button" class="btn btn-primary btn-lg mt-3 mt-sm-0 text-nowrap" data-bs-toggle="modal" data-bs-target="#infoModal">Download Info Pack</button>
           </div>
       </div>
-      <div class="col-lg-3 col-xxl-2 d-flex flex-column p-4 justify-content-center filter text-light">
-          <h3 class="ovo text-nowrap ps-2 py-2 text-center text-lg-start">Contact Us:</h3>
-          <a role="button" class="btn text-light text-nowrap py-3 text-lg-start" href="tel:+14162379595"><i class="fas fa-phone"></i> (416) 237-9595</a>
-          <a role="button" class="btn text-light text-nowrap py-2 text-lg-start" href="mailto:info@dacapomusic.ca"><i class="fas fa-envelope"></i> info@dacapomusic.ca</a>
-      </div>
 
-  </div><!--/row-->
-</div><!--/BANNER-->
+  </div>
+  <!-- /BANNER MAIN -->
+</div>
+<!--/BANNER-->
 
 
 <!-- FREE TRIAL LESSON MODAL -->
