--- a/index.html
+++ b/index.html
@@ -15,13 +15,27 @@
 </head>
 <body>
 
+  <!-- BANNER SOCIAL -->
+  <div class="container-fluid top-social d-flex flex-column flex-sm-row justify-content-end align-items-center dcam-bg-gradient">
+    <div class="py-2 px-0 px-sm-3 social">
+      <a href="https://www.facebook.com/dacapomusic.ca/" target="_blank"><i class="fab fa-facebook-square fa-2x pe-3 text-light"></i></a>
+      <a href="https://www.instagram.com/dacapomusic.ca/" target="_blank"><i class="fab fa-instagram-square fa-2x pe-3 text-light"></i></a>
+      <a href="https://www.youtube.com/watch?v=gSPAOkyO4AA" target="_blank"><i class="fab fa-youtube-square fa-2x pe-3 text-light"></i></a>
+    </div>
+    <div>
+      <a role="button" class="btn text-lg-start pb-3 pb-sm-0 px-1 px-sm-3 text-light" href="mailto:info@dacapomusic.ca"><i class="fas fa-envelope"></i> info@dacapomusic.ca</a>
+      <a role="button" class="btn text-lg-start pb-3 pb-sm-0 px-1 px-sm-3 text-light" href="tel:+14162379595"><i class="fas fa-phone"></i> (416) 237-9595</a>
+    </div>
+  </div>
+
+  <!-- /BANNER SOCIAL -->
 
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-dark p-0 sticky-top">
   <div class="container-fluid dcam-bg-gradient">
     <a class="navbar-brand" href="index.html">
       <img src="img/dcam-logo-white.png" class="img-btn py-2" alt="Da Capo Academy of Music Logo" width="250">
-    </a>    
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -50,7 +64,7 @@
                     <a class="nav-link dcam-btn" href="teachers.html">Teachers</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link dcam-btn" href="#">Reviews</a>
+                    <a class="nav-link dcam-btn" href="#reviews">Reviews</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link dcam-btn" href="gallery.html">Gallery</a>
@@ -79,26 +93,14 @@
 
 <!-- BANNER -->
 <div class="container-fluid bg-dcam bg-light mb-0 banner px-0">
-  <!-- BANNER SOCIAL -->
-  <div class="container-fluid d-flex flex-column flex-sm-row justify-content-between align-items-center filter">
-    <div class="py-2 social">
-      <a href="https://www.facebook.com/dacapomusic.ca/"><i class="fab fa-facebook-square fa-2x pe-3 dcam-text-gray"></i></a>
-      <a href="https://www.instagram.com/dacapomusic.ca/"><i class="fab fa-instagram-square fa-2x pe-3 dcam-text-gray"></i></a>
-      <a href="https://www.youtube.com/watch?v=gSPAOkyO4AA"><i class="fab fa-youtube-square fa-2x pe-3 dcam-text-gray"></i></a>
-    </div>
-      <a role="button" class="btn text-lg-start py-2 dcam-text-gray" href="mailto:info@dacapomusic.ca"><i class="fas fa-envelope"></i> info@dacapomusic.ca</a>
-      <a role="button" class="btn text-lg-start py-2 dcam-text-gray" href="tel:+14162379595"><i class="fas fa-phone"></i> (416) 237-9595</a>
-  </div>
-  <!-- /BANNER SOCIAL -->
 
   <!-- BANNER MAIN -->
   <div class="container-fluid d-flex justify-content-end" style="height: 100%">
 
-      <div class="col-lg-9 col-xxl-8 pe-0 d-flex flex-column justify-content-center text-center" style="padding-left: 0px">
+      <div class="col-lg-9 col-xxl-8 pe-0 d-flex flex-column justify-content-between text-center" style="padding-left: 0px">
 
-          <h1 class="display-5 dcam-text-orange roboto-ital roboto-bold">Music lessons in Etobicoke</h1>
-          <h2 class="mb-5">(Humbertown Shopping Center)</h2>
-          <h3 class="mb-5 fst-italic text-light filter p-3 rounded text-start">Discover your passion for music by learning from from our amazing teachers. Book your free, no-obligation trial lesson today and start your musical journey with Da Capo Academy of Music!</h3>
+          <h1 class="display-5 mt-5 dcam-text-orange roboto-ital roboto-bold">Discover your Passion for Music!</h1>
+          <h3 class="mb-3 fst-italic text-dark py-4 px-3 rounded text-center">Learn your favourite instrument with one of our amazing teachers. Book your free, no-obligation trial lesson today and start your musical journey with DCAM today</h3>
           <!-- <h3>&bullet; Choose from <span class="lessons"></span></h3> -->
 
           <div class="d-flex flex-column flex-sm-row justify-content-evenly mt-2 mb-5">
@@ -278,7 +280,7 @@
 
 <!--WELCOME SECTION-->
 
-<div class="container-fluid py-5 dcam-blue-light">
+<div class="container-fluid py-5">
 <div class="row">
     <div class="card mx-auto p-0" style="max-width: 1000px;">
       <div class="row g-0">
@@ -467,7 +469,7 @@
 
 <!-- TESTIMONIALS SECTION -->
 
-<div class="container py-5">
+<div class="container py-5" id="reviews">
 
   <div class="col-md-12 text-center mb-5 text-dark">
     <h2 class="display-6">What our customers say</h2>
