added new banner design to all active pages

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-  <!-- BANNER SOCIAL -->
+  <!-- SOCIAL SECTION -->
   <div class="container-fluid top-social d-flex flex-column flex-sm-row justify-content-end align-items-center dcam-bg-gradient">
     <div class="py-2 px-0 px-sm-3 social">
       <a href="https://www.facebook.com/dacapomusic.ca/" target="_blank"><i class="fab fa-facebook-square fa-2x pe-3 text-light"></i></a>
@@ -27,8 +27,7 @@
       <a role="button" class="btn text-lg-start pb-3 pb-sm-0 px-1 px-sm-3 text-light" href="tel:+14162379595"><i class="fas fa-phone"></i> (416) 237-9595</a>
     </div>
   </div>
-
-  <!-- /BANNER SOCIAL -->
+  <!-- /SOCIAL SECTION -->
 
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-dark p-0 sticky-top">
@@ -93,24 +92,19 @@
 
 <!-- BANNER -->
 <div class="container-fluid bg-dcam bg-light mb-0 banner px-0">
-
-  <!-- BANNER MAIN -->
   <div class="container-fluid d-flex justify-content-end" style="height: 100%">
 
-      <div class="col-lg-9 col-xxl-8 pe-0 d-flex flex-column justify-content-between text-center" style="padding-left: 0px">
+      <div class="col-lg-9 col-xxl-9 pe-0 d-flex flex-column justify-content-center text-center" style="padding-left: 0px">
+          <h1 class="display-5 mt-2 dcam-text-orange roboto-ital roboto-bold">Discover the world of possibilities with music.</h1>
+          <h3 class="mb-3 text-dark py-4 px-3 rounded text-center">Music lessons for all ages and skill levels levels in the charming Etobicoke neighbourhood of Humber Valley Village.</h3>
 
-          <h1 class="display-5 mt-5 dcam-text-orange roboto-ital roboto-bold">Discover your Passion for Music!</h1>
-          <h3 class="mb-3 fst-italic text-dark py-4 px-3 rounded text-center">Learn your favourite instrument with one of our amazing teachers. Book your free, no-obligation trial lesson today and start your musical journey with DCAM today</h3>
-          <!-- <h3>&bullet; Choose from <span class="lessons"></span></h3> -->
-
-          <div class="d-flex flex-column flex-sm-row justify-content-evenly mt-2 mb-5">
-                  <button type="button" class="btn btn-warning text-light btn-lg mb-3 mb-sm-0 text-nowrap" data-bs-toggle="modal" data-bs-target="#trialModal">Free Trial Lesson</button>
-                  <button type="button" class="btn btn-primary btn-lg mt-3 mt-sm-0 text-nowrap" data-bs-toggle="modal" data-bs-target="#infoModal">Download Info Pack</button>
+          <div class="d-flex flex-column flex-sm-row justify-content-center align-items-center mt-2 overflow-hidden">
+                  <button type="button" class="btn btn-warning text-light btn-lg mb-3 mb-sm-0 me-sm-4 text-nowrap" data-bs-toggle="modal" data-bs-target="#trialModal">Free Trial Lesson</button>
+                  <button type="button" class="btn btn-primary btn-lg mt-3 mt-sm-0 ms-sm-4 text-nowrap" data-bs-toggle="modal" data-bs-target="#infoModal">Download Info Pack</button>
           </div>
       </div>
 
   </div>
-  <!-- /BANNER MAIN -->
 </div>
 <!--/BANNER-->
 
@@ -690,6 +684,7 @@ var typed = new Typed('.lessons', {
 
 });
 </script>
+<!-- <h3>&bullet; Choose from <span class="lessons"></span></h3> -->
 
 <!-- CDN scripts, for testing -->
 
