--- a/our-mission.html
+++ b/our-mission.html
@@ -15,6 +15,21 @@
 </head>
 <body>
 
+  <!-- SOCIAL SECTION -->
+  <div class="container-fluid top-social d-flex flex-column flex-sm-row justify-content-end align-items-center dcam-bg-gradient">
+    <div class="py-2 px-0 px-sm-3 social">
+      <a href="https://www.facebook.com/dacapomusic.ca/" target="_blank"><i class="fab fa-facebook-square fa-2x pe-3 text-light"></i></a>
+      <a href="https://www.instagram.com/dacapomusic.ca/" target="_blank"><i class="fab fa-instagram-square fa-2x pe-3 text-light"></i></a>
+      <a href="https://www.youtube.com/watch?v=gSPAOkyO4AA" target="_blank"><i class="fab fa-youtube-square fa-2x pe-3 text-light"></i></a>
+    </div>
+    <div>
+      <a role="button" class="btn text-lg-start pb-3 pb-sm-0 px-1 px-sm-3 text-light" href="mailto:info@dacapomusic.ca"><i class="fas fa-envelope"></i> info@dacapomusic.ca</a>
+      <a role="button" class="btn text-lg-start pb-3 pb-sm-0 px-1 px-sm-3 text-light" href="tel:+14162379595"><i class="fas fa-phone"></i> (416) 237-9595</a>
+    </div>
+  </div>
+  <!-- /SOCIAL SECTION -->
+
+
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-dark p-0 sticky-top">
   <div class="container-fluid dcam-bg-gradient">
@@ -77,28 +92,22 @@
 
 
 <!-- BANNER -->
-<div class="container-fluid bg-dcam bg-light mb-5">
-  <div class="row d-flex justify-content-end">
+<div class="container-fluid bg-dcam bg-light mb-0 banner px-0">
+  <div class="container-fluid d-flex justify-content-end" style="height: 100%">
 
-      <div class="col-lg-6 col-xxl-7 pe-0 text-center mt-5">
-          <div>
-            <h1 class="display-4 dcam-text-orange roboto-ital roboto-bold">Music Lessons in Etobicoke</h1>
-            <p class="lead">Discover the joy that music can bring, register for your free trial today!</p>
-          </div>
+      <div class="col-lg-9 col-xxl-9 pe-0 d-flex flex-column justify-content-center text-center" style="padding-left: 0px">
+          <h1 class="display-5 mt-2 dcam-text-orange roboto-ital roboto-bold">Discover the world of possibilities with music.</h1>
+          <h3 class="mb-3 text-dark py-4 px-3 rounded text-center">Music lessons for all ages and skill levels levels in the charming Etobicoke neighbourhood of Humber Valley Village.</h3>
 
-          <div class="d-md-flex justify-content-center pt-5 mb-5">
-                  <button type="button" class="btn btn-warning text-light btn-lg mb-3 mb-sm-0 me-3 text-nowrap" data-bs-toggle="modal" data-bs-target="#trialModal">Free Trial Lesson</button>
-                  <button type="button" class="btn btn-primary btn-lg mt-3 mt-sm-0 ms-3 text-nowrap" data-bs-toggle="modal" data-bs-target="#infoModal">Download Info Pack</button>
+          <div class="d-flex flex-column flex-sm-row justify-content-center align-items-center mt-2 overflow-hidden">
+                  <button type="button" class="btn btn-warning text-light btn-lg mb-3 mb-sm-0 me-sm-4 text-nowrap" data-bs-toggle="modal" data-bs-target="#trialModal">Free Trial Lesson</button>
+                  <button type="button" class="btn btn-primary btn-lg mt-3 mt-sm-0 ms-sm-4 text-nowrap" data-bs-toggle="modal" data-bs-target="#infoModal">Download Info Pack</button>
           </div>
       </div>
-      <div class="col-lg-3 col-xxl-2 d-flex p-5 flex-column justify-content-center filter text-light text-center">
-          <h3 class="ovo text-nowrap">Contact Us:</h3>
-          <a role="button" class="btn text-light text-nowrap" href="tel:+14162379595"><i class="fas fa-phone"></i> (416) 237-9595</a>
-          <a role="button" class="btn text-light text-nowrap" href="mailto:info@dacapomusic.ca"><i class="fas fa-envelope"></i> info@dacapomusic.ca</a>
-      </div>
-
-  </div><!--/row-->
-</div><!--/BANNER-->
+      
+  </div>
+</div>
+<!--/BANNER-->
 
 
 <!-- FREE TRIAL LESSON MODAL -->
